Enhance modifier-only shortcuts

Trigger modifier-only shortcuts trigger on release, and support multi-key
modifier-only shortcuts, which trigger only when all the modifiers are
released within some interval.

BUG: 464805
BUG: 470256